# genius_sep_2025

./: .gitignore  README.md
code/: Cargo.toml  hello_db.db
code/actix_diesel/: Cargo.toml
code/actix_diesel/src/: main.rs
code/actix_docker/: Cargo.toml  Dockerfile
code/actix_docker/src/: main.rs
code/actix_hello/: Cargo.toml
code/actix_hello/src/: main.rs
code/actix_json/: Cargo.toml
code/actix_json/src/: main.rs
code/actix_middleware_auth/: Cargo.toml
code/actix_middleware_auth/src/: main.rs
code/actix_middleware_client/: Cargo.toml
code/actix_middleware_client/src/: main.rs
code/actix_path/: Cargo.toml
code/actix_path/src/: main.rs
code/actix_sqlx/: Cargo.toml
code/actix_sqlx/src/: main.rs
code/actix_state/: Cargo.toml
code/actix_state/src/: main.rs
code/benchmark_critereon/: Cargo.toml
code/benchmark_critereon/benches/: prime.rs
code/benchmark_critereon/src/: lib.rs
code/flamegraph/: Cargo.toml  Dockerfile
code/flamegraph/src/: main.rs
code/python/concurrency/: oops.py
code/spans/: Cargo.toml
code/spans/src/: main.rs
code/tracing_json/: Cargo.toml
code/tracing_json/src/: main.rs
code/tracing_simple/: Cargo.toml
code/tracing_simple/src/: main.rs
manual/: book.toml
manual/src/: SUMMARY.md
manual/src/01_concurrency/: async_and_sync_together.md  async_blocking_operations.md  async_hello_world.md  async_in_rust_vs_other_languages.md  async_mutexes.md  async_overview.md  async_wrap_up.md  awaiting_spawning_joining_and_selecting.md  backpressure.md  channels_and_thread_communication.md  design_async_actors.md  (+21 more)
(+81 files in other folders)
